[tool.poetry]
name = "promptwizard"
version = "1.0.0"
description = "Fork with slight customization from promptwizard repo by Agarwal et al., 2024"
authors = ["Agarwal et al"]
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["promptwizard"]